
2001-10-09  joe  c  <marcus@marcuscom.com>

	* configure.in: Fix problem with forced PAM
	* etc/afpd/unix.c: Fix a problem setting directory perms on FreeBSD (thanks
	to Glenn Trewitt <glenn@trewitt.org>)

2001-10-04  jeff b  <jeff@univrel.pr.uconn.edu>

	Released 1.5pre8

2001-10-03  joe c   <marcus@marcuscom.com>
	
	* configure.in: Fix bug with PAM configuration
	* etc/afpd/directory.c: Fix bug with unaccessible directories causing
	afpd to erroneously return AFPERR_NOOBJ
	* acinclude.m4: Fixed make problem on systems running libtool 1.3.x

2001-09-28  joe c   <marcus@marcuscom.com>

	* libatalk/cnid/cnid_close.c: Add more db3 3.3.x compatibility to CNID DB

2001-09-27  joe c   <marcus@marcuscom.com>

	* libatalk/cnid/cnid_open.c: Set internal deadlock detection

2001-09-23  joe c   <marcus@marcuscom.com>

	* libatalk/cnid/cnid_close.c, libatalk/cnid/cnid_resolve.c,
	libatalk/cnid/cnid_open.c: More s/errno/rc fixes and some code
	cleanup

2001-09-22  joe c   <marcus@marcuscom.com>

	* configure.in: Fix db3 compilation on Linux

	* libatalk/cnid/cnid_get.c: Fix another potential deadlock problem by
	replacing EAGAIN with DB_LOCK_DEADLOCK

2001-09-21  joe c   <marcus@marcuscom.com>

	* etc/afpd/desktop.c: Re-enable codepage translations (thanks to
	Egon Niederacher <niederacher@fh-vorarlberg.ac.at>)

	* libatalk/cnid/cnid_add.c, libatalk/cnid/cnid_get.c,
	libatalk/cnid/cnid_lookup.c, libatalk/cnid/cnid_close.c,
	libatalk/cnid/cnid_open.c, libatalk/cnid/cnid_update.c: Fixed bugs
	with database contention and database corruption.

2001-09-19  joe c   <marcus@marcuscom.com>

	* etc/afpd/afp_config.c: Fixed a bug where SRVLOC services wouldn't
	show up in OS 9.x

	* libatalk/cnid/cnid_add.c: Fix a bug where some DBT data structures
	were not being memset to NULL correctly.

2001-09-18  joe c   <marcus@marcuscom.com>

	* etc/afpd/afp_options.c: Fix a bug in the custom icon code (thanks to
	Edmund Lam <epl@unimelb.edu.au> for finding this)
